Add renderer plugin and update project dependencies
- Introduced a new Bun plugin for rendering HTML with templating directives.
- Added `happy-dom` as a dependency for DOM manipulation.
- Created bunfig.toml for server configuration.
- Refactored HTML files to use the hacky templating system :)

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     },
     "peerDependencies": {
         "typescript": "^5"
+    },
+    "dependencies": {
+        "happy-dom": "^18.0.1"
     }
 }
